@@ -194,7 +194,7 @@ dnl  --------------
 dnl | Python setup |--------------------------------------------
 dnl  --------------
 AC_ARG_ENABLE(python, [  --enable-python        build python bindings [default=auto]], enable_python="$enableval", enable_python=auto)
-AC_ARG_ENABLE(python-mod, [  --enable-python-module build python bindings [default=no]], enable_python_mod="$enableval", enable_python_mod=no)
+AC_ARG_ENABLE(python-plugin, [  --enable-python-plugin build python plugin [default=no]], enable_python_plugin="$enableval", enable_python_plugin=no)
 
 if test "x$enable_python" != "xno"; then
     dnl check for python
@@ -219,7 +219,7 @@ else
 fi
 
 AM_CONDITIONAL(HAVE_PYTHON, test x$have_python = xyes)
-AM_CONDITIONAL(HAVE_PYTHON_MOD, test x$enable_python_mod = xyes)
+AM_CONDITIONAL(HAVE_PYTHON_PLUGIN, test x$enable_python_plugin = xyes)
 dnl -----------------------------------------------------------
 
 dnl  --------------
@@ -284,7 +284,7 @@ echo
 echo "Planner prefix    : $prefix"
 echo "Build API docs    : $enable_gtk_doc"
 echo "Python bindings   : $have_python"
-echo "Python module     : $enable_python_mod"
+echo "Python plugin     : $enable_python_plugin"
 echo "Dotnet bindings   : $have_dotnet"
 echo "GDA support       : $use_gda"
 echo "Time table view   : $enable_timetable"
