@@ -1,6 +1,6 @@
 <Root>
   <commands>	
-    <cmd name="Python script" _label="Execute a Python scipt" pixtype="stock" pixname="Execute"/>
+    <cmd name="Python script" _label="Execute a Python script" pixtype="stock" pixname="Execute"/>
   </commands>
   <menu>
     <submenu    name="Actions">
