@@ -21,6 +21,7 @@ data/planner.desktop.in
 data/ui/gantt-view.ui
 data/ui/html-plugin.ui
 data/ui/main-window.ui
+data/ui/python-plugin.ui
 data/ui/resource-view.ui
 data/ui/sql-plugin.ui
 data/ui/task-view.ui
@@ -55,6 +56,7 @@ src/planner-cell-renderer-date.c
 src/planner-cell-renderer-list.c
 src/planner-cell-renderer-popup.c
 src/planner-cmd-manager.c
+src/planner-day-type-dialog.c
 src/planner-default-week-dialog.c
 src/planner-format.c
 src/planner-gantt-background.c
@@ -71,12 +73,12 @@ src/planner-list-model.c
 src/planner-main.c
 src/planner-phase-dialog.c
 src/planner-plugin-loader.c
-src/planner-task-popup.c
 src/planner-popup-entry.c
 src/planner-predecessor-model.c
 src/planner-print-dialog.c
 src/planner-project-properties.c
 src/planner-property-dialog.c
+src/planner-python-plugin.c
 src/planner-relation-arrow.c
 src/planner-resource-dialog.c
 src/planner-resource-input-dialog.c
@@ -85,6 +87,7 @@ src/planner-scale-utils.c
 src/planner-sidebar.c
 src/planner-sql-plugin.c
 src/planner-task-dialog.c
+src/planner-task-popup.c
 src/planner-task-tree.c
 src/planner-task-view.c
 src/planner-ttable-print.c
