@@ -1,3 +1,7 @@
+2004-05-03  Richard Hult  <richard@imendio.com>
+
+	* POTFILES.in: Update.
+
 2004-05-03  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
